force-app/main/default/objects/Cargo__c/fields/Explosive__c.field-meta.xml
<CustomField>
    <fullName>Explosive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the cargo is explosive.</description>
    <label>Explosive</label>
    <type>Checkbox</type>
</CustomField>