force-app/main/default/objects/Cargo__c/fields/Liquid__c.field-meta.xml
<CustomField>
    <fullName>Liquid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A switch that shows whether the cargo is liquid.</description>
    <label>Liquid</label>
    <type>Checkbox</type>
</CustomField>