force-app/main/default/objects/Cargo__c/fields/Perishable__c.field-meta.xml
<CustomField>
    <fullName>Perishable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perishable</label>
    <type>Checkbox</type>
</CustomField>