force-app/main/default/objects/Cargo__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <precision>16</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>