force-app/main/default/objects/Cargo__c/fields/VolumeFormula__c.field-meta.xml
<CustomField>
    <fullName>VolumeFormula__c</fullName>
    <formula>Length__c * Width__c * Height__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>