force-app/main/default/objects/Cargo__c/fields/Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Weight_Kg__c</fullName>
    <label>Weight (Kg)</label>
    <precision>16</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>