force-app/main/default/objects/Cargo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Weight_Kg__c</columns>
    <columns>Volume__c</columns>
    <columns>Explosive__c</columns>
    <columns>Liquid__c</columns>
    <columns>Perishable__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>